# heat-exchanger-design

./: .gitignore  README.md  intro.md  start.ps1
docs/: 01_项目初步总结_v1.3_20251130.md  (+2 more)
project/: PROJECT_SUMMARY.md  QUICK_START.md  README.md  checkGPU.py  demo.py  evaluate_rl.py  main.py  pyproject.toml  requirements.txt  run_experiments.py  start.ps1  train_rl.py
project/analysis/: __init__.py  pareto.py
project/baselines/: __init__.py  rule_based.py
project/configs/: default.yaml  dqn_config.yaml  experiment.yaml  ppo_config.yaml  sac_continuous.yaml
project/data/: carbon_factors.py  tou_prices.csv
project/data/schedules/: carbon_intensity.csv  electricity_price.csv
project/data/weather/: Shanghai_2024.epw  oikolab_raw.csv
project/docs/: experiment_results.md  technical_doc.md
project/env/: __init__.py  tes_heatex_env.py  utils.py
project/envs/: __init__.py  builder.py  carbon_wrapper.py  energyplus_api.py  eplus_env.py  gym_wrapper.py  real_eplus_env.py  sinergym_env.py
project/metrics/: __init__.py  calculator.py
project/models/: __init__.py  economic_model.py  heat_exchanger.py  thermal_storage.py  transformer_policy.py
project/outputs/: sim_building.idf  sim_building_frozen.idf
project/outputs/experiment_20251130_233727/: comparison.csv  experiment_summary.json  pareto.csv
project/outputs/experiment_20251201_121426/: experiment_summary.json  pareto.csv
project/outputs/manual_run/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.mdd  eplusout.mtr  eplusout.rdd  eplusout.wrl  eplustbl.htm
project/outputs/quick_results/: comparison.csv  pareto.csv
project/outputs/results/: baseline_results.csv
project/outputs/sizing_run/: eplusmtr.csv  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.mdd  eplusout.mtd  eplusout.mtr  eplusout.rdd  eplusout.rvaudit  eplusout.wrl  eplusssz.csv  eplustbl.htm  epluszsz.csv
project/rl_algorithms/: __init__.py  train.py
project/scripts/: __init__.py  evaluate.py  run_experiment.py  test_env.py  train.py  visualize.py
project/simulate/: __init__.py  generate_sample_data.py  run_eval.py
project/src/: visualization.py
project/tests/: test_models.py
project/tools/: __init__.py  check_results.py  freeze_model.py  make_er_figures.py
(+51 files in other folders)
